[project]
name = "imagebatch-utility"
description = "This is a collection of custom nodes required for processing batch images."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/watarika/ComfyUI-ImageBatch-Utility"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "watarika"
DisplayName = "ComfyUI-ImageBatch-Utility"
Icon = ""
